--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <groupId>hu.uni.eszterhazy</groupId>
   <artifactId>TestDrivenBank</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>companyManager</module>
+    </modules>
 
-  <name>TestDrivenBank</name>
+
+    <name>TestDrivenBank</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
